-переделала структуру проекта -расширила swagger (для двух окон) -доработала main.py -добавила основное окно, связала его с окном входа -добавила ввод карты (сохранение данных не реализовано) -обновила пути
